# emacs-claude-agent

./: .gitignore  CLAUDE_INSTRUCTIONS.md  DIR-LOCAL-TOOLS.md  MCP-INTEGRATION.md  README.md  SDK_BUG_REPORT.md  claude-agent-prompt.md  claude-agent-repl.el  claude-agent.el  claude-comment.el  claude-kb.el  claude-mcp-magit.el  claude-mcp-messaging.el  claude-mcp-notes-todo.el  claude-mcp-notes.el  claude-mcp-process.el  claude-mcp.el  claude-oneshot.el  claude-pair.el  claude-sessions.el  claude-transient.el  claude.el  claudemacs-agent.el  claudemacs-mcp.el  claudemacs-prompt.md  claudemacs.el  mkdocs.yml  todo.el
.claude/: settings.local.json
claude_agent/: README.md  pyproject.toml
claude_agent/claude_agent/: __init__.py  __main__.py  agent.py  protocol.py
claude_agent/tests/: __init__.py  test_agent.py  test_permission_matching.py  test_validate_tool_result.py
claude_emacs_agent/: README.md  pyproject.toml
claude_emacs_agent/claude_emacs_agent/: __init__.py  __main__.py  agent.py
claude_emacs_agent/tests/: __init__.py  test_agent.py
claudemacs_mcp/: tools.yaml
docs/: index.md
docs/contributing/: architecture.md  development.md
docs/features/: knowledge-base.md  magit.md  mcp.md  multi-agent.md  oneshot.md  overview.md  prompts.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: custom-tools.md  project-config.md  (+1 more)
emacs_mcp/: mcp-config.json  pyproject.toml  pytest.ini  update-config.py
test/: claude-actions-test.el  claude-comment-test.el  claude-projectile-integration-test.el  claude-test.el
(+7 files in other folders)
