[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-emacs-agent"
version = "0.1.0"
description = "Python wrapper for Claude CLI that provides a clean interface for Emacs integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-emacs-agent = "claude_emacs_agent:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
